--- a/quick-start.css
+++ b/quick-start.css
@@ -487,7 +487,7 @@ body {
 
 .resources-grid {
     display: flex;
-    gap: 260px;
+    gap: 100px;
 }
 
 .featured-resource {
